# phase_locked

./: .gitignore  AURELIA_ARCHITECTURE.md  AURELIA_IMPLEMENTATION_SUMMARY.md  CODEBASE_ANALYSIS_DETAILED.txt  CODE_REDUNDANCY_DETAILS.txt  CORDIC_INTEGRATION.md  EXECUTIVE_SUMMARY.txt  FINAL_PRODUCT.md  FINANCIAL_ADAPTATION.md  IMPLEMENTATION_SUMMARY.md  LATENCY_ARCHITECTURE.md  LICENSE  MOBILE_AGENT_COMPLETE.md  ONTOLOGICAL_GOLDEN_THEORY.md  OPTIMAL_WORKFLOW.md  PRODUCT_ARCHITECTURE.md  PRODUCT_SUMMARY.md  README.md  README_FINANCIAL_CORDIC.md  RUST_WASM_INTEGRATION.md  TAURI_GUI.md  TENSOR_SERIES.py  VALIDATION_COMPLETE.md  WORKFLOW_SUMMARY.md  ablation_visualization.py  advanced_visualizations.py  arxiv_preprint.tex  arxiv_summary.md  benchmark_unified_tensor.py  comprehensive_test.py  demo_unique_features.py  economic_demo.py  economic_theory_paper.md  game_state_transitions.md  game_theory_validation.py  journal_graphics.py  letter_self_organization.py  mathematical_necessity_integer_nlp.md  ontological_golden_framework.py  references.bib  (+11 more)
ablation_study/: README.md  integer_vs_float_ablation_study.md  run_ablation_study.py  tensor_ablation_study.py
ablation_study/output/: benchmark_details.txt
aurelia-core/: Cargo.toml
aurelia-core/src/: lib.rs
aurelia-core/src/consciousness/: emotional_state.rs  mod.rs  personality.rs
aurelia-core/src/memory/: mod.rs
aurelia-core/src/trading/: mod.rs
aurelia-core/src/zeckendorf/: mod.rs
bit_cascade/: Architecture Overview  phinet.py
demo/: FRAMEWORK_REVIEW.md
docs/: implementation.md  math_foundations.md
examples/: basic_generation.py  cordic_visual_demo.py  financial_analysis_demo.py  retrocausal_demo.py  visualize_topology.py
mobile-agent/: Cargo.toml  README.md
mobile-agent/src/consciousness/: mod.rs
mobile-agent/src/lattice/: mod.rs
notebooks/: quick_start.ipynb
output/: tensor_analysis.txt
phi-mamba-desktop/: README.md
phi-mamba-desktop/src/: App.css  App.tsx
phi-mamba-desktop/src-tauri/: Cargo.toml
phi-mamba-desktop/src-tauri/src/: encoder.rs  lib.rs  main.rs  metrics.rs  shared_memory.rs  websocket.rs
phi-mamba-desktop/src/components/: LatencyMonitor.css  LatencyMonitor.tsx
phi-mamba-desktop/src/hooks/: useLatencyMonitor.ts
phi-mamba-signals/: Cargo.toml  README.md
phi-mamba-signals/src/: lib.rs
phi-mamba-signals/src/cordic/: fixed_point.rs  mod.rs  phi_arithmetic.rs  rotation.rs
phi-mamba-signals/src/encoding/: berry_phase.rs  financial.rs  mod.rs  zeckendorf.rs
phi_core/: Cargo.toml  README.md
phi_core/examples/: minimal_resistance_demo.rs
phi_core/src/: boundary.rs  latent_n.rs  lib.rs  maximal.rs  memory.rs  phi_arithmetic.rs  token_stream.rs  zeckendorf.rs
phi_mamba/: __init__.py  constants.py  cordic.py  core.py  decision_framework.py  encoding.py  financial_cordic_adapter.py  financial_data.py  financial_encoding.py  financial_forecast.py  financial_system.py  generation.py  math_core.py  phase_dynamics.py  unified_tensor.py  utils.py  validation.py
rust_phi_mamba/: Cargo.toml  README.md  SETUP_AND_RUN.md
rust_phi_mamba/crates/phi-core/: Cargo.toml
rust_phi_mamba/crates/phi-core/examples/: zordic_demo.rs
rust_phi_mamba/crates/phi-core/src/: lib.rs  zordic.rs  zordic_optimized.rs
rust_phi_mamba/crates/phi-tauri/: Cargo.toml
rust_phi_mamba/crates/phi-tauri/src/: main.rs
rust_phi_mamba/crates/phi-wasm/: Cargo.toml
rust_phi_mamba/crates/phi-wasm/src/: lib.rs
rust_phi_mamba/notes/: implementation_analysis.md
rust_phi_mamba/zordic/: IMPROVEMENTS_IMPLEMENTED.md  IMPROVEMENTS_ROADMAP.md
rust_phi_mamba/zordic/attention/: mod.rs
rust_phi_mamba/zordic/docs/: IMPLEMENTATION_GUIDE.md  SYSTEM_ARCHITECTURE.md
rust_phi_mamba/zordic/memory/: holographic.rs  mod.rs
tests/: test_core.py
zordic_desktop/: QUICKSTART.md  README.md  VALIDATION_GUIDE.md  requirements.txt  run_validation.py  run_zordic.py  test_system.py
zordic_desktop/src/: __init__.py  zordic_core.py  zordic_gui.py
zordic_desktop/src/validation/: __init__.py  oeis_core.py  proof_certificate.py  sequence_validator.py  theorem_prover.py
zordic_desktop/validation_outputs/: proof_certificate.md  proof_certificate.tex
zordic_sensorium/: README.md  requirements.txt  run_sensorium.py
zordic_sensorium/src/: ai_engine_bridge.py  sensorium_hud.py
