[package]
name = "phi-mamba-signals"
version = "0.1.0"
edition = "2021"
authors = ["Phase Locked Team"]
description = "Phi-Mamba trade signal generation using golden ratio mathematics and CORDIC computation"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Fixed-point arithmetic for CORDIC
fixed = "1.24"
num-traits = "0.2"

# Data parallelism
rayon = "1.8"

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[dev-dependencies]
criterion = "0.5"

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "serde-wasm-bindgen"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
