[package]
name = "phi-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
nalgebra = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }