[package]
name = "phi-wasm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
phi-core = { path = "../phi-core" }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
js-sys = { workspace = true }

[dependencies.web-sys]
workspace = true
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"